@@ -1,4 +1,5 @@
 Current
+Fixed: GITHUB-2107: A new extension of SkipException to support retry check when exception happened (Yehui Wang)
 Fixed: GITHUB-2069: JUnit TestSuite not handled correctly in Reports (Krishnan Mahadevan)
 Fixed: GITHUB-2075: Thread interrupt flag persists between test methods (Krishnan Mahadevan)
 Fixed: GITHUB-2074: Thread Interrupted when using expectedException (Krishnan Mahadevan)
